c++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:26:02 **** Incremental Build of configuration Debug for project SDL2.5 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\SDL2.5.o" "..\\src\\SDL2.5.cpp" 
..\src\SDL2.5.cpp: In function 'int SDL_main()':
..\src\SDL2.5.cpp:13:30: error: 'SDL_init' was not declared in this scope
  SDL_init(SDL_INIT_EVERYTHING);
                              ^
